--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,8 @@ header {
     max-height: 400px;
     flex-grow: 1;
     object-fit: contain;
+    border-radius: 50%;
+    max-width: fit-content;
   }
   table{
     word-break: break-all;
